[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
futures = "0.3.31"
dashmap = "6.1.0"
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics"] }
borsh = "1.5.7"
serde_json = "1.0.142"
arc-swap = "1.7.1"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

solana-pubkey = "4.0.0"
solana-hash = "4.0.1"
solana-commitment-config = "3.0.0"
solana-rpc-client-types = "3.0.10"
solana-pubsub-client = "3.0.10"
solana-rpc-client = "3.0.10"
solana-account-decoder-client-types = "3.0.10"
solana-program = "3.0.0"
solana-account-info = "3.0.0"
solana-transaction = "3.0.2"
solana-keypair = "3.1.0"
solana-signer = "3.0.0"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
