[package]
name = "router"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
solana = []

[dependencies]
pinocchio = { version = "0.9.2", default-features = false }
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-token-2022 = "0.1.0"

[dev-dependencies]
mollusk-svm = { version = "0.9.0", features = ["inner-instructions"] }
mollusk-svm-programs-token = "0.9.0"
mollusk-svm-bencher = "0.9.0"
solana-sdk = "3"
solana-account-decoder = "3"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"
borsh = "1.6.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
